EmissionFactorMatching/objects/NZC_EmissionsMatchingMatrix__c.object
<CustomObject>
    <fields>
        <fullName>AliasHashStorage__c</fullName>
        <description>This is a number that will be auto-generated by code looking at the matching criteria defined in Alias Hash Keys</description>
        <inlineHelpText>This is a number that will be auto-generated by code looking at the matching criteria defined in Alias Hash Keys</inlineHelpText>
        <label>Alias Hash Storage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AliasHashkeys__c</fullName>
        <description>A comma separated list of values that will act as an alias for matching. Ex: Light Duty Truck,2010</description>
        <inlineHelpText>A comma separated list of values that will act as an alias for matching. Ex: Light Duty Truck,2010</inlineHelpText>
        <label>Alias Hash Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicableObject__c</fullName>
        <description>What object does this matrix record apply to?</description>
        <inlineHelpText>What object does this matrix record apply to?</inlineHelpText>
        <label>Applicable Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupOverride__c</fullName>
        <description>Used to provide a specific emissions factor Id to guarantee a result</description>
        <inlineHelpText>Used to provide a specific emissions factor Id to guarantee a result</inlineHelpText>
        <label>Lookup Override</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryHashStorage__c</fullName>
        <description>This is a number that will be auto-generated by code looking at the matching criteria defined in Primary Hash Keys</description>
        <inlineHelpText>This is a number that will be auto-generated by code looking at the matching criteria defined in Primary Hash Keys</inlineHelpText>
        <label>Primary Hash Storage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryHashkeys__c</fullName>
        <description>A comma separated list of keys that will match to this record. Ex: Light Duty Truck,1973</description>
        <inlineHelpText>A comma separated list of keys that will match to this record. Ex: Light Duty Truck,1973</inlineHelpText>
        <label>Primary Hash Keys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Emissions Matching Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApplicableObject__c</columns>
        <columns>PrimaryHashkeys__c</columns>
        <columns>PrimaryHashStorage__c</columns>
        <columns>AliasHashkeys__c</columns>
        <columns>AliasHashStorage__c</columns>
        <columns>LookupOverride__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{00000000}</displayFormat>
        <label>Emissions Matching Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emissions Matching Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>